# numamma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  doc.org  install_everything.sh  notes.org
cmake/: Findbacktrace.cmake  Findlibelf.cmake  Findnumactl.cmake  Findnumap.cmake  Findpfm.cmake
demo/: tab.html
scripts/: CMakeLists.txt  plot_counters.sh  plot_interactive_timeline.py  plot_pages_matrix.R  plot_timeline.R  plot_timeline.in  summary_to_plot.in
src/: CMakeLists.txt  Makefile  counters_to_binding.py  create_blocks.in  launcher.c  mem_analyzer.c  mem_analyzer.h  mem_intercept  mem_intercept.c  mem_intercept.h  mem_intercept.in  mem_run.c  mem_run.in  mem_sampling.c  mem_sampling.h  mem_tools.c  mem_tools.h  memory.c  memory.h  numamma.c  numamma.h.in  numma.h.in
test/: Makefile  bench_malloc.c  lib_test_symbols.c  mat_mul.c  mat_mul_global_vars.c  test_binding.c  test_callsite.c  test_memory.c  test_symbols.c
tools/: CMakeLists.txt  Makefile  count_events.c  count_events.in  hash.c  hash.h  hash_test.c
